# nickel-querier

./: .gitignore  LICENSE  README.md  ROADMAP.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: build.yml  test.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ConnectionManager.css  ConnectionManager.tsx  ConnectionPanel.css  ConnectionPanel.tsx  ExplainViewer.css  ExplainViewer.tsx  QueryEditor.css  QueryEditor.tsx  QueryHistory.css  QueryHistory.tsx  QueryTabs.css  QueryTabs.tsx  ResultViewer.css  ResultViewer.tsx  SavedQueries.css  SavedQueries.tsx  SchemaExplorer.css  SchemaExplorer.tsx
src/lib/: commands.ts  n1ql-formatter.test.ts  n1ql-formatter.ts  n1ql-language.test.ts  n1ql-language.ts  storage.test.ts  storage.ts  types.ts
src/styles/: App.css  global.css
